--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Personal Website</title>
+
+  <!-- Meta Etiquetas para SEO -->
+  <title>Desarrollador Frontend en React | Edwing Picado</title>
+  <meta name="description"
+    content="Desarrollador frontend en React con experiencia en la creación de aplicaciones web atractivas y responsivas.">
+  <meta name="author" content="Edwing Abraham Picado Pantoja">
+  <meta http-equiv="content-language" content="es">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://eapp.dev">
+  <meta name="keywords"
+    content="Desarrollador Frontend, React Frontend, React, ReactJS, JS, Javascript, Portfolio, Edwing Picado, Edwing Abraham Picado Pantoja">
+
+  <!-- Etiquetas Open Graph para Redes Sociales -->
+  <meta property="og:title" content="Desarrollador Frontend en React | Edwing Picado" />
+  <meta property="og:description"
+    content="Desarrollador frontend en React con experiencia en la creación de aplicaciones web atractivas y responsivas." />
+  <meta property="og:image" content="" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="eapp.dev" />
+  <meta property="og:site_name" content="Edwing Picado - Portafolio" />
+
 </head>
-<body >
+
+<body>
   <div id="root"></div>
   <noscript>habilite javascript para utilizar este sitio web</noscript>
 </body>
+
 </html>
