--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <!-- Meta Etiquetas para SEO -->
   <title>Desarrollador Frontend en React | Edwing Picado</title>
@@ -25,11 +25,11 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="eapp.dev" />
   <meta property="og:site_name" content="Edwing Picado - Portafolio" />
-
 </head>
 
 <body>
   <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
   <noscript>habilite javascript para utilizar este sitio web</noscript>
 </body>
 
